k8s-haproxy/haproxy-service.yml
apiVersion: v1
kind: Service
metadata:
  name: haproxy-service
  namespace: emontoya
spec:
  ports:
  - port: 80
    protocol: TCP
  selector:
    app: haproxy-app
  type: NodePort
